--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
+
 body {
     background-color: hsl(204, 12%, 25%);
+    font-family: 'Oswald', sans-serif;
 }
 
 .center-screen {   
@@ -18,6 +21,9 @@ body {
 #clock {
     width: 100%;
     height: 100%;
+
+    font-size: 70px;
+    text-align: center;
 }
 
 #command-field {
