--- a/css/main.css
+++ b/css/main.css
@@ -22,10 +22,30 @@ body {
     width: 100%;
     height: 100%;
 
-    font-size: 70px;
+    font-size: 4rem;
+    letter-spacing: 0.2rem;
     text-align: center;
 }
 
 #command-field {
-    display: hidden;
+    display: 'none';
+    background-color: hsl(204, 12%, 25%);
+}
+
+input[type=text] {
+    border: none;
+    background-color: hsl(204, 12%, 25%);
+    text-align: center;
+    color: white;
+    letter-spacing: 0.2rem;
+    font-size: 4rem;
+}
+
+input[type=text]:focus {
+    outline: none;
+}
+
+.fillout {
+    width: 100%;
+    height: 100%;
 }
