--- a/css/main.css
+++ b/css/main.css
@@ -28,14 +28,51 @@ body {
 }
 
 #command-field {
-    display: 'none';
+    position: relative;
+    display: none;
     background-color: hsl(204, 12%, 25%);
 }
 
 input[type=text] {
+    position: relative;
     border: none;
+    background-color: transparent;
+    color: #FFFFFF;
+    letter-spacing: 0.2rem;
+    font-size: 4rem;
+    width: 100%;
+    height: 20vh;
+    opacity: 1;
+    z-index: 2;
+}
+
+#searchHint {
+    position: absolute;
+    top: -4px;
+    left: 0;
+
+    transform: translateY(-50%);
+
+    padding: 0;
+
     background-color: hsl(204, 12%, 25%);
-    text-align: center;
+
+    border: none;
+    color: rgb(151, 151, 151);
+    letter-spacing: 0.2rem;
+    font-size: 4rem;
+    width: 100%;
+    height: 20vh;
+    opacity: 1;
+    z-index: 1;
+}
+
+#searchForm {
+    display: inherit;
+}
+
+#searchPrefix {
+    display: inherit;
     color: white;
     letter-spacing: 0.2rem;
     font-size: 4rem;
