--- a/chrome_extension/site/css/main.css
+++ b/chrome_extension/site/css/main.css
@@ -30,7 +30,7 @@ body {
 #command-field {
     position: relative;
     display: none;
-    background-color: hsl(204, 12%, 25%);
+    background-color: transparent;
 }
 
 input[type=text] {
@@ -55,7 +55,7 @@ input[type=text] {
 
     padding: 0;
 
-    background-color: hsl(204, 12%, 25%);
+    background-color: transparent;
 
     border: none;
     color: rgb(151, 151, 151);
