--- a/chrome_extension/site/css/main.css
+++ b/chrome_extension/site/css/main.css
@@ -41,9 +41,12 @@ input[type=text] {
     letter-spacing: 0.2rem;
     font-size: 4rem;
     width: 100%;
-    height: 20vh;
+    height: 10vh;
     opacity: 1;
     z-index: 2;
+    padding-left: .5em;
+    padding-right: 0.5em;
+    border-radius: .5em;
 }
 
 #searchHint {
@@ -55,16 +58,19 @@ input[type=text] {
 
     padding: 0;
 
-    background-color: transparent;
+    background-color: #61616123;
 
     border: none;
-    color: rgb(151, 151, 151);
+    color: rgb(175, 175, 175);
     letter-spacing: 0.2rem;
     font-size: 4rem;
     width: 100%;
-    height: 20vh;
+    height: 10vh;
     opacity: 1;
     z-index: 1;
+    padding-left: .5em;
+    padding-right: 0.5em;
+    border-radius: .5em;
 }
 
 #searchForm {
