added some breadcrumbs and refectored some code and fixed something in the Shortcutssystem

--- a/chrome_extension/site/css/main.css
+++ b/chrome_extension/site/css/main.css
@@ -3,6 +3,7 @@
 body {
     background-color: hsl(204, 12%, 25%);
     font-family: 'Oswald', sans-serif;
+    background-repeat: no-repeat;
 }
 
 .center-screen {   
