--- a/chrome_extension/site/css/main.css
+++ b/chrome_extension/site/css/main.css
@@ -4,6 +4,7 @@ body {
     background-color: hsl(204, 12%, 25%);
     font-family: 'Oswald', sans-serif;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .center-screen {   
@@ -19,6 +20,102 @@ body {
     width: 50vw;
 }
 
+.shortcut-category-container {
+    position: absolute;
+    top: 5em;
+    left: 50%;
+    transform: translate(-50%, 0);
+
+    width: 50vw;
+    color: white;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 1em;
+    row-gap: 1em;
+
+    font-size: 1.25rem;
+}
+
+.category {
+    width: 100%;
+    background-color: #616161b2;
+    border-radius: .5em;
+    padding: 1em;
+    padding-right: 0px;
+    padding-left: 0;
+    min-width: 0
+}
+
+.category h1 {
+    margin-top: 0;
+    letter-spacing: 0.1rem;
+    padding-left: .8em;
+}
+
+ul {
+    list-style: none;
+    margin-left: 1em;
+}
+
+ul li::before {
+    content: "\2022";  
+    color: rgb(189, 189, 189); 
+    font-weight: bold; 
+    display: inline-block; 
+    width: .5em; 
+    margin-left: -1em; 
+    transition: color .4s cubic-bezier(0,.5,0,1);
+}
+
+ul li:hover::before {
+    color: rgb(255, 255, 255);
+}
+
+a {
+    position: relative;
+    color: rgb(189, 189, 189);
+    text-decoration: none;
+    transition: color .4s cubic-bezier(0,.5,0,1);
+}
+
+a::after {
+    border-radius: 1em;
+    border-top: .1em solid rgb(255, 255, 255);
+    content: "";
+    position: absolute;
+      right: 100%;
+      bottom: 0;
+      left: 0;
+      transition: right .4s cubic-bezier(0,.5,0,1);
+}
+
+a:hover::after {
+    right: 0;
+}
+
+a:hover {
+    color: #FFFFFF;
+}
+
+.shortcut-category-close {
+    position: absolute;
+
+    position: absolute;
+    top: 2em;
+    left: 50%;
+    transform: translate(-50%, 0);
+    transform-origin: right;
+
+    width: 4em;
+    height: 4em;
+    transition: all .4s cubic-bezier(0,.5,0,1); 
+}
+
+.shortcut-category-close:hover {
+    transform: scale(2);
+}
+
 #clock {
     width: 100%;
     height: 100%;
@@ -26,6 +123,7 @@ body {
     font-size: 4rem;
     letter-spacing: 0.2rem;
     text-align: center;
+    cursor: pointer;
 }
 
 #command-field {
