--- a/chrome_extension/site/css/main.css
+++ b/chrome_extension/site/css/main.css
@@ -116,6 +116,23 @@ a:hover {
     transform: scale(2);
 }
 
+.arrow-to-dest {
+    positioN: absolute;
+    left: 3em;
+    bottom: -3.5em;
+    height: 20px;
+}
+
+.dest-text {
+    float: right;
+    padding-top: .05em;
+}
+
+.arrow {
+    height: 100%;
+    width: 2em;
+}
+
 #clock {
     width: 100%;
     height: 100%;
