--- a/site/src/assets/base.css
+++ b/site/src/assets/base.css
@@ -19,5 +19,29 @@ body {
 }
 
 .glass-bg {
-    @apply bg-sky-300 bg-opacity-10 rounded-2xl backdrop-opacity-80 backdrop-blur-2xl;
+    @apply bg-sky-300 bg-opacity-10 backdrop-opacity-80 backdrop-blur-2xl;
+}
+
+.settings-menu-item {
+    @apply text-white md:pl-3 pb-2 pt-3 mt-1 text-base md:text-lg md:text-right md:ml-5 md:pr-5 pl-5 md:rounded-l-full hover:bg-sky-300 hover:bg-opacity-10 w-full md:w-auto h-full leading-none last:mb-3;
+}
+
+.nt-input {
+    @apply text-base p-3 bg-opacity-70 backdrop-opacity-80 text-white bg-gray-900 rounded-md focus:border-white border border-transparent box-border outline-none
+}
+
+.scrollbar::-webkit-scrollbar {
+    @apply w-1
+}
+
+.scrollbar::-webkit-scrollbar-track {
+    @apply h-full bg-opacity-20 backdrop-opacity-10 bg-white
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+    @apply rounded-sm bg-white
+}
+
+.scrollbar::-webkit-scrollbar-thumb:hover {
+    @apply bg-gray-200
 }
