--- a/site/src/assets/base.css
+++ b/site/src/assets/base.css
@@ -45,3 +45,11 @@ body {
 .scrollbar::-webkit-scrollbar-thumb:hover {
     @apply bg-gray-200
 }
+
+@layer base {
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+}
