Added search functionality

--- a/site/src/assets/base.css
+++ b/site/src/assets/base.css
@@ -52,4 +52,11 @@ body {
       -webkit-appearance: none;
       margin: 0;
     }
+
+    input[type="search"]::-webkit-search-decoration,
+    input[type="search"]::-webkit-search-cancel-button,
+    input[type="search"]::-webkit-search-results-button,
+    input[type="search"]::-webkit-search-results-decoration {
+        -webkit-appearance:none;
+    }
 }
